// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBottomNav.ts should be visible with a true value 1`] = `
Object {
  "height": "56px",
  "transform": "none",
}
`;

exports[`VBottomNav.ts should be visible with a true value 2`] = `

<div class="v-item-group v-bottom-nav theme--light"
     style="height: 56px;"
>
  <button type="button"
          class="v-btn v-btn--contained theme--light v-size--default"
  >
    <span class="v-btn__content">
    </span>
  </button>
  <button type="button"
          class="v-btn v-btn--contained theme--light v-size--default"
  >
    <span class="v-btn__content">
    </span>
  </button>
</div>

`;

exports[`VBottomNav.ts should be visible with a true value 3`] = `
Object {
  "height": "56px",
  "transform": "translateY(100%)",
}
`;

exports[`VBottomNav.ts should be visible with a true value 4`] = `

<div class="v-item-group v-bottom-nav theme--light"
     style="height: 56px;"
>
  <button type="button"
          class="v-btn v-btn--contained theme--light v-size--default"
  >
    <span class="v-btn__content">
    </span>
  </button>
  <button type="button"
          class="v-btn v-btn--contained theme--light v-size--default"
  >
    <span class="v-btn__content">
    </span>
  </button>
</div>

`;
